# darknet-python

./: .gitignore  CMakeLists.txt  README.md  changetext  easy_build.bash  easy_build_clblast.bash  git_rm_tag.bash  git_tag.bash  new_build.bash  reinit.bash
aux/: README.md  runv3.bash  runv3tiny.bash
bootstrap/: darknet_py_ubuntu18_cuda_install
debian/: control  rules
docs/: config
example/: predict_1.py  predict_2.py  predict_2_loop.py
ext/: README.md  configure_darknet.bash  download_darknet.bash
ext/CLBlast/: easy_build.bash
ext/CLBlast/debian/: changelog  control  copyright  files  rules
ext/CLBlast/debian/tmp/DEBIAN/: control
ext/CLBlast/debian/tmp/usr/lib/: libclblast.so.1
ext/CLBlast/debian/tmp/usr/lib/cmake/CLBLast/: CLBlastConfig-release.cmake  CLBlastConfig.cmake
ext/CLBlast/debian/tmp/usr/lib/pkgconfig/: clblast.pc
ext/darknet/: Makefile
ext/sowson_darknet/: .gitignore  CMakeLists.txt  Makefile  README.md
ext/sowson_darknet/examples/: attention.c  classifier.c  darknet.c  detector.c  go.c  instance-segmenter.c  regressor.c  segmenter.c  yolo.c
ext/sowson_darknet/include/: darknet.h
ext/sowson_darknet/patches/: clblast.patch
ext/sowson_darknet/src/: CMakeCache.txt  activation_kernels.c  activation_kernels.cl  activations.h  blas.h  blas_kernels.c  blas_kernels.cl  convolutional_kernels.c  convolutional_layer.c  cost_layer.c  crop_layer.c  data.c  deconvolutional_kernels.c  deconvolutional_layer.c  demo.c  detection_layer.c  dropout_layer.c  gemm.c  image.c  image_opencv.cpp  iseg_layer.c  layer.c  maxpool_layer.c  network.c  normalization_layer.c  opencl.c  opencl.h  parser.c  region_layer.c  reorg_layer.c  route_layer.c  shortcut_layer.c  upsample_layer.c  utils.c  yolo_layer.c
include/: common.h  constant.h  darknet_bridge.h  makeswig.bash  module.i  module.i.base  template
misc/: links.txt
python/: quicktest.py
python/darknet/: README.md  template.py
python/darknet/api2/: __init__.py  constant.py  error.py  predictor.py  tools.py  trainer.py
python/darknet/api2/data/: README.md
python/darknet/core/: __init__.py
python/darknet/turk/: gui.py  template_qt.py
src/: darknet_bridge.cpp  template
test/: mytest.cpp  template
